# aoc2025

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  util.cpp  util.h
src/day1/: puzzle1.cpp  puzzle2.cpp
src/day2/: puzzle1.cpp  puzzle2.cpp
src/day3/: puzzle1.cpp  puzzle2.cpp
src/day4/: puzzle1.cpp  puzzle2.cpp
src/day5/: puzzle1.cpp  puzzle2.cpp
src/day6/: puzzle1.cpp  puzzle2.cpp
src/day7/: puzzle1.cpp  puzzle2.cpp
